--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
           glitchS = document.getElementById("glitchSound"),
           systemErrorS = document.getElementById("systemErrorSound"),
           beamHumS = document.getElementById("beamHumSound"),
-          stoneCrackingS = document.getElementById("stoneCracking.mp3"),
+          // BUG FIX: Corrected the ID from "stoneCracking.mp3" to "stoneCrackingSound"
+          stoneCrackingS = document.getElementById("stoneCrackingSound"),
           powerSirenS = document.getElementById("powerSirenSound"),
           annihilatorBeamS = document.getElementById("annihilatorBeamSound"),
           phaseShiftS = document.getElementById("phaseShiftSound"),
