--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Eternal Momentum (Modular)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
@@ -67,25 +67,25 @@
       <button id="closeModalBtn" style="margin-top: 20px;">Close</button>
   </div>
   
-  <audio id="pickupSound" src="assets/pickup.mp3" preload="auto"></audio>
-  <audio id="hitSound" src="assets/hit.mp3" preload="auto"></audio>
-  <audio id="shockwaveSound" src="assets/shockwave.mp3" preload="auto"></audio>
-  <audio id="chainSound" src="assets/chain.mp3" preload="auto"></audio>
-  <audio id="gravitySound" src="assets/gravity.mp3" preload="auto"></audio>
-  <audio id="bgMusic" src="assets/music.mp3" loop preload="auto"></audio>
-  <audio id="chargeUpSound" src="assets/chargeUp.mp3" preload="auto"></audio>
-  <audio id="chargeDashSound" src="assets/chargeDash.mp3" preload="auto"></audio>
-  <audio id="magicDispelSound" src="assets/magicDispel.mp3" preload="auto"></audio>
-  <audio id="glitchSound" src="assets/glitch.mp3" preload="auto"></audio>
-  <audio id="systemErrorSound" src="assets/systemError.mp3" preload="auto"></audio>
-  <audio id="beamHumSound" src="assets/beamHum.mp3" preload="auto" loop></audio>
-  <audio id="stoneCrackingSound" src="assets/stoneCracking.mp3" preload="auto"></audio>
-  <audio id="powerSirenSound" src="assets/powerSiren.mp3" preload="auto"></audio>
-  <audio id="annihilatorBeamSound" src="assets/annihilatorBeam.mp3" preload="auto"></audio>
-  <audio id="phaseShiftSound" src="assets/phaseShift.mp3" preload="auto"></audio>
-  <audio id="powerDrainSound" src="assets/powerDrain.mp3" preload="auto"></audio>
-  <audio id="finalBossPhaseSound" src="assets/finalBossPhase.mp3" preload="auto"></audio>
+  <audio id="pickupSound" src="./assets/pickup.mp3" preload="auto"></audio>
+  <audio id="hitSound" src="./assets/hit.mp3" preload="auto"></audio>
+  <audio id="shockwaveSound" src="./assets/shockwave.mp3" preload="auto"></audio>
+  <audio id="chainSound" src="./assets/chain.mp3" preload="auto"></audio>
+  <audio id="gravitySound" src="./assets.gravity.mp3" preload="auto"></audio>
+  <audio id="bgMusic" src="./assets/music.mp3" loop preload="auto"></audio>
+  <audio id="chargeUpSound" src="./assets/chargeUp.mp3" preload="auto"></audio>
+  <audio id="chargeDashSound" src="./assets/chargeDash.mp3" preload="auto"></audio>
+  <audio id="magicDispelSound" src="./assets/magicDispel.mp3" preload="auto"></audio>
+  <audio id="glitchSound" src="./assets/glitch.mp3" preload="auto"></audio>
+  <audio id="systemErrorSound" src="./assets/systemError.mp3" preload="auto"></audio>
+  <audio id="beamHumSound" src="./assets/beamHum.mp3" preload="auto" loop></audio>
+  <audio id="stoneCrackingSound" src="./assets/stoneCracking.mp3" preload="auto"></audio>
+  <audio id="powerSirenSound" src="./assets/powerSiren.mp3" preload="auto"></audio>
+  <audio id="annihilatorBeamSound" src="./assets/annihilatorBeam.mp3" preload="auto"></audio>
+  <audio id="phaseShiftSound" src="./assets/phaseShift.mp3" preload="auto"></audio>
+  <audio id="powerDrainSound" src="./assets/powerDrain.mp3" preload="auto"></audio>
+  <audio id="finalBossPhaseSound" src="./assets/finalBossPhase.mp3" preload="auto"></audio>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
