--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <audio id="hitSound" src="./assets/hit.mp3" preload="auto"></audio>
   <audio id="shockwaveSound" src="./assets/shockwave.mp3" preload="auto"></audio>
   <audio id="chainSound" src="./assets/chain.mp3" preload="auto"></audio>
-  <audio id="gravitySound" src="./assets.gravity.mp3" preload="auto"></audio>
+  <audio id="gravitySound" src="./assets/gravity.mp3" preload="auto"></audio>
   <audio id="bgMusic" src="./assets/music.mp3" loop preload="auto"></audio>
   <audio id="chargeUpSound" src="./assets/chargeUp.mp3" preload="auto"></audio>
   <audio id="chargeDashSound" src="./assets/chargeDash.mp3" preload="auto"></audio>
