--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
         </div>
 
         <div class="ui-pod right-pod">
+            <button id="ascensionBtn" title="Ascension Grid">✨</button>
             <button id="levelSelectBtn" title="Level Select">⚙️</button>
-            <button id="arenaBtn" title="Arena Mode">⚔️</button>
             <button id="soundToggle" title="Toggle Sound">🔊</button>
-            <button id="restartBtn" title="Restart Game">🔄</button>
         </div>
     </div>
   </div>
@@ -64,7 +63,27 @@
   <div id="levelSelectModal">
       <h2>Select a Level to Test</h2>
       <div id="levelSelectGrid"></div>
-      <button id="closeModalBtn" style="margin-top: 20px;">Close</button>
+      <div id="modal-actions">
+        <button id="arenaBtn" title="Arena Mode">⚔️ Arena Mode</button>
+        <button id="closeLevelSelectBtn">Close</button>
+      </div>
+  </div>
+
+  <div id="ascensionGridModal">
+    <div id="ascension-grid-container">
+        <div class="ascension-header">
+            <h1>ASCENSION GRID</h1>
+            <div class="ap-display-header">
+                <span>ASCENSION POINTS</span>
+                <span id="ap-total-asc-grid">0</span>
+            </div>
+        </div>
+        <div class="ascension-content">
+            <!-- Grid content will be generated here by JS -->
+            <p>The Ascension Grid is under construction.</p>
+        </div>
+        <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
+    </div>
   </div>
   
   <audio id="pickupSound" src="./assets/pickup.mp3" preload="auto"></audio>
