--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Eternal Momentum (Modular)</title>
+  <title>Eternal Momentum</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no"/>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -80,7 +80,7 @@
         </div>
         <div class="ascension-content">
             <!-- Grid content will be generated here by JS -->
-            <p>The Ascension Grid is under construction.</p>
+            <p style="text-align: center; margin-top: 50px; font-size: 1.2rem;">Feature coming soon!</p>
         </div>
         <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
     </div>
