--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <canvas id="gameCanvas"></canvas>
   <div id="vignette"></div>
+  <div id="unlock-notification"></div>
 
   <div id="ui-container">
     <div id="status-effects-bar"></div>
@@ -79,7 +80,6 @@
             </div>
         </div>
         <div class="ascension-content">
-            <!-- Grid content will be generated here by JS -->
             <p style="text-align: center; margin-top: 50px; font-size: 1.2rem;">Feature coming soon!</p>
         </div>
         <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
