--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <div id="levelSelectGrid"></div>
       <div id="modal-actions">
         <button id="arenaBtn" title="Arena Mode">⚔️ Arena Mode</button>
+        <button id="clearSaveBtn" title="Clear All Progress">ERASE TIMELINE</button>
         <button id="closeLevelSelectBtn">Close</button>
       </div>
   </div>
@@ -88,7 +89,7 @@
             </div>
         </div>
         <div class="ascension-content">
-            </div>
+             </div>
         <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
     </div>
   </div>
