--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
       </div>
   </div>
 
+  <div id="custom-confirm">
+      <div id="custom-confirm-box">
+          <h2 id="custom-confirm-title"></h2>
+          <p id="custom-confirm-text"></p>
+          <div id="custom-confirm-actions">
+              <button id="confirm-yes">Confirm</button>
+              <button id="confirm-no">Cancel</button>
+          </div>
+      </div>
+  </div>
+
   <div id="ui-container">
     <div id="status-effects-bar"></div>
     <div class="command-bar">
