--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div id="loading-screen">
+      <img src="./assets/load.png" alt="Loading..." class="loading-logo">
+      <div id="loading-progress-container">
+          <div id="loading-progress-fill"></div>
+      </div>
+      <p id="loading-status-text">Initializing Systems...</p>
+  </div>
+
   <canvas id="gameCanvas"></canvas>
   <div id="vignette"></div>
   <div id="unlock-notification"></div>
@@ -40,71 +48,64 @@
             </div>
             <div id="ascension-points-display">AP: 0</div>
         </div>
-
-        <div id="health-bar-container">
-            <div id="health-bar-value" class="health-high"></div>
-            <div id="shield-bar-overlay"></div>
-            <div id="health-bar-sheen"></div>
-            <span id="health-bar-text">100 / 100</span>
-        </div>
-
         <div class="core-display">
             <div class="ability-cluster">
-                <div class="ability-queue offensive">
-                    <div class="queue-slot" id="q-off-1"></div>
-                    <div class="queue-slot" id="q-off-2"></div>
+                <div class="ability-queue defensive">
+                    <div class="queue-slot" id="slot-def-2"></div>
+                    <div class="queue-slot" id="slot-def-1"></div>
                 </div>
                 <div class="abilities">
-                    <div class="ability-slot main" id="slot-off-0" data-tooltip-text="Offensive">
-                        <span class="ability-key">L-Click</span>
-                    </div>
-                    <div class="ability-slot" id="slot-def-0" data-tooltip-text="Defensive">
-                        <span class="ability-key">R-Click</span>
-                    </div>
+                    <div class="ability-slot" id="slot-def-0" data-tooltip-text="Defensive Power (Right-Click)"></div>
+                    <div class="ability-slot main" id="slot-off-0" data-tooltip-text="Offensive Power (Left-Click)"></div>
                 </div>
-                <div class="ability-queue defensive">
-                    <div class="queue-slot" id="q-def-1"></div>
-                    <div class="queue-slot" id="q-def-2"></div>
+                <div class="ability-queue offensive">
+                    <div class="queue-slot" id="slot-off-1"></div>
+                    <div class="queue-slot" id="slot-off-2"></div>
                 </div>
             </div>
         </div>
-
         <div class="ui-pod right-pod">
-            <button id="ascensionBtn" title="Ascension Grid">✨</button>
-            <button id="levelSelectBtn" title="Stage Select">🗺️</button>
-            <button id="soundToggle" title="Toggle Sound">🔊</button>
+            <button id="ascensionBtn" data-tooltip-text="Ascension Grid">💠</button>
+            <button id="levelSelectBtn" data-tooltip-text="Stage Select">🗺️</button>
+            <button id="soundToggle">🔊</button>
         </div>
     </div>
-  </div>
-
-  <div id="bossBanner"></div>
-  <div id="bossHpContainer"></div>
-
-  <div id="levelSelectModal">
-      <h2>Select Stage</h2>
-      <div id="levelSelectGrid"></div>
-      <div id="modal-actions">
-        <button id="arenaBtn" title="Arena Mode">⚔️ Arena Mode</button>
-        <button id="clearSaveBtn" title="Clear All Progress">ERASE TIMELINE</button>
-        <button id="closeLevelSelectBtn">Close</button>
-      </div>
-  </div>
-
-  <div id="ascensionGridModal">
-    <div id="ascension-grid-container">
-        <div class="ascension-header">
-            <h1>ASCENSION GRID</h1>
-            <div class="ap-display-header">
-                <span>ASCENSION POINTS</span>
-                <span id="ap-total-asc-grid">0</span>
-            </div>
-        </div>
-        <div class="ascension-content">
-             </div>
-        <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
+    <div id="health-bar-container">
+        <div id="shield-bar-overlay"></div>
+        <div id="health-bar-value" class="health-high"></div>
+        <div id="health-bar-text">100 / 100</div>
+        <div id="health-bar-sheen"></div>
     </div>
   </div>
   
+  <div id="bossHpContainer"></div>
+
+  <div id="levelSelectModal">
+      <div id="modal-content">
+          <h2>Select a Stage</h2>
+          <div id="levelSelectGrid"></div>
+          <div id="modal-actions">
+              <button id="arenaBtn">Arena Mode</button>
+              <button id="closeLevelSelectBtn">Close</button>
+              <button id="clearSaveBtn">Clear Save</button>
+          </div>
+      </div>
+  </div>
+  
+  <div id="ascensionGridModal">
+      <div id="ascension-grid-container">
+          <div class="ascension-header">
+              <h1>Ascension Grid</h1>
+              <div class="ap-display-header">
+                  <span>Available Points:</span>
+                  <span id="ap-total-asc-grid">0</span>
+              </div>
+          </div>
+          <div class="ascension-content"></div>
+          <button id="closeAscensionBtn" class="close-ascension-grid">Close</button>
+      </div>
+  </div>
+
   <audio id="pickupSound" src="./assets/pickup.mp3" preload="auto"></audio>
   <audio id="hitSound" src="./assets/hit.mp3" preload="auto"></audio>
   <audio id="shockwaveSound" src="./assets/shockwave.mp3" preload="auto"></audio>
@@ -121,9 +122,8 @@
   <audio id="powerSirenSound" src="./assets/powerSiren.mp3" preload="auto"></audio>
   <audio id="annihilatorBeamSound" src="./assets/annihilatorBeam.mp3" preload="auto"></audio>
   <audio id="phaseShiftSound" src="./assets/phaseShift.mp3" preload="auto"></audio>
-  <audio id="powerDrainSound" src="./assets/powerDrain.mp3" preload="auto"></audio>
   <audio id="finalBossPhaseSound" src="./assets/finalBossPhase.mp3" preload="auto"></audio>
-
+  
   <script type="module" src="./main.js"></script>
 </body>
 </html>
