--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div id="levelSelectGrid"></div>
           <div id="modal-actions">
               <button id="arenaBtn">Arena Mode</button>
-              <button id="clearSaveBtn">ERASE TIMELINE</button>
+              <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
               <button id="closeLevelSelectBtn">Close</button>
           </div>
       </div>
@@ -104,9 +104,11 @@
                 <span id="ap-total-asc-grid">0</span>
             </div>
         </div>
-        <div class="ascension-content">
-             </div>
-        <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
+        <div class="ascension-content"></div>
+        <div class="ascension-footer">
+            <button id="clearSaveBtn">ERASE TIMELINE</button>
+            <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
+        </div>
     </div>
   </div>
   
@@ -127,7 +129,7 @@
   <audio id="annihilatorBeamSound" src="./assets/annihilatorBeam.mp3" preload="auto"></audio>
   <audio id="phaseShiftSound" src="./assets/phaseShift.mp3" preload="auto"></audio>
   <audio id="finalBossPhaseSound" src="./assets/finalBossPhase.mp3" preload="auto"></audio>
-
+  
   <script type="module" src="./main.js"></script>
 </body>
 </html>
