--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
   <div id="bossHpContainer"></div>
 
   <div id="levelSelectModal">
-      <div id="modal-content">
-          <h2>Select a Stage</h2>
-          <div id="levelSelectGrid"></div>
-          <div id="modal-actions">
-              <button id="arenaBtn">Arena Mode</button>
-              <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
-              <button id="closeLevelSelectBtn">Close</button>
-          </div>
-      </div>
+    <div id="modal-content">
+        <h2>Select a Stage</h2>
+        <div id="levelSelectGrid"></div>
+        <div id="modal-actions">
+            <button id="arenaBtn">Arena Mode</button>
+            <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
+            <button id="closeLevelSelectBtn">Close</button>
+        </div>
+    </div>
   </div>
   
   <div id="ascensionGridModal">
@@ -104,7 +104,8 @@
                 <span id="ap-total-asc-grid">0</span>
             </div>
         </div>
-        <div class="ascension-content"></div>
+        <div class="ascension-content">
+        </div>
         <div class="ascension-footer">
             <button id="clearSaveBtn">ERASE TIMELINE</button>
             <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
