--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div id="modal-actions">
             <button id="arenaBtn">Arena Mode</button>
             <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
-            <button id="closeLevelSelectBtn">Close</button>
+            <button id="closeLevelSelectBtn" class="btn-modal-close">Close</button>
         </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
   <div id="ascensionGridModal">
     <div id="ascension-grid-container">
         <div class="ascension-header">
-            <h1>ASCENSION CONDUIT</h1>
+            <h1>STELLAR WEAVE</h1>
             <div class="ap-display-header">
                 <span>ASCENSION POINTS</span>
                 <span id="ap-total-asc-grid">0</span>
@@ -108,7 +108,7 @@
         </div>
         <div class="ascension-footer">
             <button id="clearSaveBtn">ERASE TIMELINE</button>
-            <button id="closeAscensionBtn" class="close-ascension-grid">CLOSE</button>
+            <button id="closeAscensionBtn" class="btn-modal-close">CLOSE</button>
         </div>
     </div>
   </div>
