--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="ui-pod right-pod">
-            <button id="ascensionBtn" title="Ascension Conduit">💠</button>
+            <button id="ascensionBtn" title="Stellar Weave">💠</button>
             <button id="levelSelectBtn" title="Stage Select">🗺️</button>
             <button id="soundToggle">🔊</button>
         </div>
