--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="ui-pod right-pod">
-            <button id="ascensionBtn" title="Stellar Weave">💠</button>
+            <button id="ascensionBtn" title="Ascension Conduit">💠</button>
             <button id="levelSelectBtn" title="Stage Select">🗺️</button>
             <button id="soundToggle">🔊</button>
         </div>
@@ -98,7 +98,7 @@
   <div id="ascensionGridModal">
     <div id="ascension-grid-container">
         <div class="ascension-header">
-            <h1>STELLAR WEAVE</h1>
+            <h1>ASCENSION CONDUIT</h1>
             <div class="ap-display-header">
                 <span>ASCENSION POINTS</span>
                 <span id="ap-total-asc-grid">0</span>
