--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
 
   <div id="levelSelectModal">
     <div id="modal-content">
-        <h2>Select a Stage</h2>
-        <div id="levelSelectGrid"></div>
+        <h2 class="modal-title">SELECT STAGE</h2>
+        <div id="level-select-list-container">
+            <div id="level-select-list">
+                </div>
+        </div>
         <div id="modal-actions">
             <button id="arenaBtn">Arena Mode</button>
             <button id="jumpToFrontierBtn">JUMP TO FRONTIER</button>
