--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p id="custom-confirm-text"></p>
           <div id="custom-confirm-actions">
               <button id="confirm-yes">Confirm</button>
-              <button id="confirm-no">Cancel</button>
+              <button id="confirm-no" class="btn-modal-close">Cancel</button>
           </div>
       </div>
   </div>
