--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div id="home-overlay">
       <h1 id="game-title">ETERNAL MOMENTUM</h1>
       <div id="home-actions">
-        <button id="new-game-btn" class="home-btn" style="display: none;">NEW GAME</button>
-        <button id="continue-game-btn" class="home-btn" style="display: none;">CONTINUE</button>
-        <button id="erase-game-btn" class="home-btn erase" style="display: none;">ERASE & RESTART</button>
+        <button id="new-game-btn" class="home-btn" style="display: none;">AWAKEN</button>
+        <button id="continue-game-btn" class="home-btn" style="display: none;">CONTINUE MOMENTUM</button>
+        <button id="erase-game-btn" class="home-btn erase" style="display: none;">SEVER TIMELINE</button>
       </div>
     </div>
   </div>
