--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div id="home-screen" style="display: none;">
-    <video autoplay muted loop playsinline id="home-video-bg">
+    <video autoplay muted loop playsinline id="home-video-bg" preload="auto">
       <source src="./assets/home.mp4" type="video/mp4">
     </video>
     <div id="home-overlay">
